--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,55 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
+
+#bottom{
+    display: flex;
+}
+
+#sidebar{
+    width: 60px;
+    height: calc(100vh - 55px);
+    background-color: darkblue;
+    background-image: url(../img/sidebar-bg.png);
+}
+
+#main{
+    width: calc(100vw - 60px);
+    height: calc(100vh - 55px);
+    background-color: aqua;
+}
+
+@media screen and (min-width: 578px) {
+    #sidebar{
+        width: 120px;
+    }
+
+    #main{
+        width: calc(100vw - 120px);
+    }
+
+}
+
+#altezza-sidebar{
+    height: calc(100% - 55px);
+}
+
+#img-logo{
+    width: 110px;
+    height: 60px;
+}
+
+.fa-grey{
+    color: rgb(145, 145, 145);
+}
+
+.btn:hover {
+    color: #f8f9fa;
+    background-color:#f8f9fa;
+    border-color:#f8f9fa;
+}
+
+
+
